[package]
name = "tls-load-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
bytes = "1"
rand = "0.8.5"
clap = { version = "3.1.2", features = ["derive"] }
